json project updated

--- a/.sfdx/sfdx-config.json
+++ b/.sfdx/sfdx-config.json
@@ -1,3 +1,4 @@
 {
-    "defaultdevhubusername": "sinadinodevhub@sinadino.com"
+    "defaultdevhubusername": "sinadinodevhub@sinadino.com",
+    "defaultusername": "ciorg"
 }
