--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,7 +1,7 @@
 {
   "packageDirectories": [
     {
-      "path": "sfdx-territory-assignments",
+      "path": "force-app",
       "default": true
     }
   ],
